--- a/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/DonHangComponent/TableDetailDH.form
+++ b/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/DonHangComponent/TableDetailDH.form
@@ -47,7 +47,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="jLabel1" max="32767" attributes="0"/>
                       </Group>
-                      <Component id="jPanel5" pref="410" max="32767" attributes="0"/>
+                      <Component id="jPanel5" pref="434" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
               </Group>
@@ -137,7 +137,7 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="1" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="1" attributes="0">
                                   <Group type="103" groupAlignment="1" attributes="0">
                                       <Group type="102" attributes="0">
@@ -159,18 +159,27 @@
                                   <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="lbGia1" min="-2" max="-2" attributes="0"/>
-                                      <Component id="lbGia" min="-2" max="-2" attributes="0"/>
-                                      <Component id="lbSoLuong" min="-2" max="-2" attributes="0"/>
-                                      <Component id="lbLoaiSP" min="-2" max="-2" attributes="0"/>
-                                  </Group>
-                                  <EmptySpace max="32767" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="lbcSL1" alignment="1" min="-2" max="-2" attributes="0"/>
-                                      <Component id="lbcLoai" alignment="1" min="-2" max="-2" attributes="0"/>
-                                      <Component id="lbcGia1" alignment="1" min="-2" max="-2" attributes="0"/>
-                                      <Component id="lbcgiasaukm" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="1" attributes="0">
+                                      <Group type="102" attributes="0">
+                                          <Component id="lbGia2" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace max="32767" attributes="0"/>
+                                          <Component id="lbtongchitietgia" min="-2" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Group type="102" attributes="0">
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Component id="lbGia1" min="-2" max="-2" attributes="0"/>
+                                              <Component id="lbGia" min="-2" max="-2" attributes="0"/>
+                                              <Component id="lbSoLuong" min="-2" max="-2" attributes="0"/>
+                                              <Component id="lbLoaiSP" min="-2" max="-2" attributes="0"/>
+                                          </Group>
+                                          <EmptySpace pref="33" max="32767" attributes="0"/>
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Component id="lbcSL1" alignment="1" min="-2" max="-2" attributes="0"/>
+                                              <Component id="lbcLoai" alignment="1" min="-2" max="-2" attributes="0"/>
+                                              <Component id="lbcGia1" alignment="1" min="-2" max="-2" attributes="0"/>
+                                              <Component id="lbcgiasaukm" alignment="1" min="-2" max="-2" attributes="0"/>
+                                          </Group>
+                                      </Group>
                                   </Group>
                                   <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                               </Group>
@@ -216,7 +225,12 @@
                               <Component id="lbGia1" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="lbcgiasaukm" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="43" max="32767" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="lbGia2" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="lbtongchitietgia" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace pref="18" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -343,6 +357,22 @@
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JLabel" name="lbcgiasaukm">
+                  <Properties>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Arial" size="14" style="0"/>
+                    </Property>
+                    <Property name="text" type="java.lang.String" value="jLabel15"/>
+                  </Properties>
+                </Component>
+                <Component class="javax.swing.JLabel" name="lbGia2">
+                  <Properties>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Segoe UI" size="14" style="1"/>
+                    </Property>
+                    <Property name="text" type="java.lang.String" value="T&#x1ed5;ng chi ti&#x1ebf;t gi&#xe1; :"/>
+                  </Properties>
+                </Component>
+                <Component class="javax.swing.JLabel" name="lbtongchitietgia">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Arial" size="14" style="0"/>
@@ -488,9 +518,9 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
-                          <Component id="confirmBtn" max="32767" attributes="0"/>
+                          <Component id="confirmBtn" pref="184" max="32767" attributes="0"/>
                           <EmptySpace min="-2" pref="62" max="-2" attributes="0"/>
-                          <Component id="deleteBtn" max="32767" attributes="0"/>
+                          <Component id="deleteBtn" pref="156" max="32767" attributes="0"/>
                           <EmptySpace min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
